fixed hero and heandline so it works on mobile

--- a/src/pages/store/merchPage.module.css
+++ b/src/pages/store/merchPage.module.css
@@ -7,11 +7,7 @@
 .hero {
   background-color: var(--color-main);
   gap: 1rem;
-  background-image: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0.5),
-      var(--color-main)
-    ),
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), var(--color-main)),
     url("../../assets/skull_bw.png");
   background-position: center;
   background-repeat: no-repeat;
@@ -100,5 +96,18 @@
 
   .button {
     font-size: 11px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .hero {
+    background-position: center;
+    background-size: cover;
+    gap: 0.5rem;
+  }
+
+  .headline {
+    font-size: 2rem;
+    line-height: 2.2rem;
   }
 }
